chore: update CHANGELOG for v4.0.5